Adding a basic step transport display

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -13,3 +13,16 @@ body {
   width: 1080px;
   margin: 0 auto;
 }
+
+
+#content #controls, #content #play {
+  position: relative;
+  width: 50%;
+  float: left;
+  margin: 1em 0;
+}
+
+
+#content #play {
+  text-align: right;
+}
