--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -15,14 +15,51 @@ body {
 }
 
 
-#content #controls, #content #play {
+#content #controls, #content #play, #content #rhythm {
   position: relative;
-  width: 50%;
   float: left;
   margin: 1em 0;
 }
 
 
+#content #controls {
+  width: 25%;
+}
+
+
+#content #rhythm {
+  width: 60%;
+  text-align: center;
+}
+
+
 #content #play {
+  width: 15%;
   text-align: right;
+}
+
+
+#content #rhythm p {
+  text-align: center;
+  margin: 0;
+}
+
+
+#content #rhythm button {
+  position: relative;
+  width: 100%;
+  margin-left: 1px;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #09c;
+}
+
+
+#content button.active {
+  background-color: #09c;
+}
+
+
+#content button.off {
+  background-color: #eee;
 }
